(optymalziation) use multiprocessing and rever numba features which slow down processing

--- a/src/notebooks/ihc_numba_multiprocessing.ipynb
+++ b/src/notebooks/ihc_numba_multiprocessing.ipynb
@@ -10,28 +10,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rozgrzewanie Numba (kompilacja JIT)...\n",
+      "Kompilacja zakończona.\n",
+      "\n",
       "\n",
       "Instancja: Dane_TSP_76.xlsx\n",
-      "HERE\n",
-      "HERE\n",
-      "HERE\n",
-      "HERE\n",
-      "HERE\n",
-      "HERE\n",
+      "[15.294651746749878, 15.095995903015137, 15.08499789237976, 15.080434322357178, 15.176350831985474, 15.116434812545776]\n",
       "\n",
-      "Łączny czas eksperymentów: 0.89 min (53.15 sek)\n",
+      "Łączny czas eksperymentów: 0.27 min (15.91 sek)\n",
       "\n",
       "Podsumowanie (pierwsze 20 wierszy):\n",
       "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  mean_runtime  min_cost                                                                                                                                                                                                                    min_route\n",
-      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  98840.261      8.811966 98352.406 32-29-27-26-30-31-19-20-10-9-8-7-6-5-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-15-16-12-11-17-18-37-36-38-39-35-34-40-41-60-59-58-55-56-57-61-62-63-64-73-72-71-65-66-51-50-49-52-53-54-42-43-28-33\n",
+      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  99356.433     15.141478 98615.532 21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-29-26-27-28-43-42-54-53-49-50-52-55-56-51-66-65-71-72-73-64-63-62-61-57-58-59-60-41-40-33-32-35-34-39-38-36-37-18-17-11-12-16-15-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25\n",
       "\n",
       "Podsumowanie statystyczne (średnie po neighborhood_type):\n",
       "                   mean_cost   min_cost  mean_runtime\n",
       "neighborhood_type                                    \n",
-      "two_opt            98840.261  98352.406         8.812\n",
+      "two_opt            99356.433  98615.532        15.141\n",
       "\n",
       "Najlepsze parametry:\n",
-      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 98840.261, 'mean_runtime': 8.811965805499009, 'min_cost': 98352.406, 'min_route': '32-29-27-26-30-31-19-20-10-9-8-7-6-5-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-15-16-12-11-17-18-37-36-38-39-35-34-40-41-60-59-58-55-56-57-61-62-63-64-73-72-71-65-66-51-50-49-52-53-54-42-43-28-33'}\n"
+      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 99356.433, 'mean_runtime': 15.141477584838867, 'min_cost': 98615.532, 'min_route': '21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-29-26-27-28-43-42-54-53-49-50-52-55-56-51-66-65-71-72-73-64-63-62-61-57-58-59-60-41-40-33-32-35-34-39-38-36-37-18-17-11-12-16-15-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25'}\n"
      ]
     }
    ],
@@ -44,6 +42,7 @@
     "# Główne elementy:\n",
     "#   - rozgrzanie kompilatora Numba (aby uniknąć narzutu JIT)\n",
     "#   - wielokrotne uruchamianie algorytmu z tymi samymi parametrami\n",
+    "#   - multiprocessing (każde powtórzenie w osobnym procesie)\n",
     "#   - wyznaczanie średnich kosztów i czasów\n",
     "#   - zapisywanie najlepszej (minimalnej) trasy\n",
     "#   - zapis wyników przy użyciu save_experiment_results()\n",
@@ -54,10 +53,12 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
     "from src.algorithms.ihc_numba import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
-    "\n",
+    "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
     "# USTAWIENIA\n",
     "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
@@ -72,12 +73,6 @@
     "    \"stop_no_improve\": [1600],  # limit stagnacji\n",
     "    \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
-    "# PARAM_GRID = {\n",
-    "#     \"n_starts\": [5, 10, 20, 50], # liczba losowych restartów wspinaczki\n",
-    "#     \"max_iter\": [100, 500, 1000], # maksymalna liczba iteracji jednej wspinaczki\n",
-    "#     \"stop_no_improve\": [10, 50, 100], # ile kroków bez poprawy kończy wspinaczkę\n",
-    "#     \"neighborhood_type\": [\"swap\", \"insert\", \"two_opt\"],\n",
-    "# }\n",
     "\n",
     "REPEATS = 6   # liczba powtórzeń dla każdej kombinacji parametrów\n",
     "results = []  # tablica na wyniki\n",
@@ -102,36 +97,31 @@
     "            for stop_no_improve in PARAM_GRID[\"stop_no_improve\"]:\n",
     "                for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
     "\n",
-    "                    costs = []\n",
-    "                    runtimes = []\n",
-    "                    best_route_overall = None\n",
-    "                    min_cost = float(\"inf\")\n",
+    "                    params = {\n",
+    "                        \"n_starts\": n_starts,\n",
+    "                        \"max_iter\": max_iter,\n",
+    "                        \"stop_no_improve\": stop_no_improve,\n",
+    "                        \"neighborhood_type\": neighborhood_type,\n",
+    "                    }\n",
     "\n",
-    "                    # wielokrotne powtórzenia\n",
-    "                    for _ in range(REPEATS):\n",
-    "                        params = {\n",
-    "                            \"n_starts\": n_starts,\n",
-    "                            \"max_iter\": max_iter,\n",
-    "                            \"stop_no_improve\": stop_no_improve,\n",
-    "                            \"neighborhood_type\": neighborhood_type,\n",
-    "                        }\n",
+    "                    # multiprocessing — równoległe powtórzenia\n",
+    "                    with Pool(processes=cpu_count()) as pool:\n",
+    "                        parallel_jobs = [\n",
+    "                            (solve_tsp, D, params) for _ in range(REPEATS)\n",
+    "                        ]\n",
     "\n",
-    "                        start_t = time.perf_counter()\n",
-    "                        route, cost, _, _ = solve_tsp(D, params)\n",
-    "                        total_time = time.perf_counter() - start_t\n",
+    "                        results_parallel = pool.map(run_single_repeat, parallel_jobs)\n",
     "\n",
-    "                        costs.append(cost)\n",
-    "                        runtimes.append(total_time)\n",
+    "                    costs = [c for c, _, _ in results_parallel]\n",
+    "                    routes = [r for _, r, _ in results_parallel]\n",
+    "                    runtimes = [t for _, _, t in results_parallel]\n",
     "\n",
-    "                        # zapamiętujemy najlepszą trasę z powtórzeń\n",
-    "                        if cost < min_cost:\n",
-    "                            min_cost = cost\n",
-    "                            best_route_overall = route\n",
-    "\n",
-    "                    # zapis najlepszego route jako string\n",
+    "                    # wybór najlepszej trasy\n",
+    "                    min_cost = min(costs)\n",
+    "                    best_route_overall = routes[costs.index(min_cost)]\n",
     "                    route_str = \"-\".join(map(str, best_route_overall))\n",
     "\n",
-    "                    # dodanie wiersza wyników\n",
+    "                    # zapis danych\n",
     "                    results.append({\n",
     "                        \"instance\": tsp_file,\n",
     "                        \"n_starts\": n_starts,\n",
@@ -161,17 +151,7 @@
     "      .mean().round(3))\n",
     "\n",
     "best = df.loc[df[\"mean_cost\"].idxmin()]\n",
-    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")\n",
-    "# Minimalne wyniki dla sprawdzenia\n",
-    "# ---------- python\n",
-    "# 177_408.05\n",
-    "# 113_232.504\n",
-    "# 101_052.592\n",
-    "# 97_959.335\n",
-    "# ---------- excel\n",
-    "# 119_028.44\n",
-    "# 111_729.62\n",
-    "# @njit(cache=True)"
+    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")"
    ]
   }
  ],
