(optymalization) use delta to compute new distance instead full recompute

--- a/src/notebooks/ihc_numb_delta.ipynb
+++ b/src/notebooks/ihc_numb_delta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -18,19 +18,19 @@
       "\n",
       "Instancja: Dane_TSP_76.xlsx\n",
       "\n",
-      "Łączny czas eksperymentów: 1.22 min (73.41 sek)\n",
+      "Łączny czas eksperymentów: 0.93 min (55.80 sek)\n",
       "\n",
       "Podsumowanie (pierwsze 20 wierszy):\n",
       "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  mean_runtime  min_cost                                                                                                                                                                                                                    min_route\n",
-      "Dane_TSP_76.xlsx      2000     20000             2000           two_opt   98374.15     12.226143 98225.647 42-54-53-52-55-56-51-49-50-66-65-71-72-73-64-63-57-62-61-58-59-60-41-40-34-39-38-35-36-37-18-17-16-15-11-12-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25-21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-26-27-29-32-33-28-43\n",
+      "Dane_TSP_76.xlsx      2000     20000             2000           two_opt  98734.925      9.290176 97924.329 35-32-33-34-38-39-40-41-60-59-61-62-58-57-63-64-73-72-71-65-66-50-49-51-56-55-52-53-54-42-43-28-27-26-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36\n",
       "\n",
       "Podsumowanie statystyczne (średnie po neighborhood_type):\n",
       "                   mean_cost   min_cost  mean_runtime\n",
       "neighborhood_type                                    \n",
-      "two_opt             98374.15  98225.647        12.226\n",
+      "two_opt            98734.925  97924.329          9.29\n",
       "\n",
       "Najlepsze parametry:\n",
-      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 2000, 'max_iter': 20000, 'stop_no_improve': 2000, 'neighborhood_type': 'two_opt', 'mean_cost': 98374.15, 'mean_runtime': 12.226143125166951, 'min_cost': 98225.647, 'min_route': '42-54-53-52-55-56-51-49-50-66-65-71-72-73-64-63-57-62-61-58-59-60-41-40-34-39-38-35-36-37-18-17-16-15-11-12-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25-21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-26-27-29-32-33-28-43'}\n"
+      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 2000, 'max_iter': 20000, 'stop_no_improve': 2000, 'neighborhood_type': 'two_opt', 'mean_cost': 98734.925, 'mean_runtime': 9.290176250165436, 'min_cost': 97924.329, 'min_route': '35-32-33-34-38-39-40-41-60-59-61-62-58-57-63-64-73-72-71-65-66-50-49-51-56-55-52-53-54-42-43-28-27-26-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36'}\n"
      ]
     }
    ],
@@ -113,7 +113,7 @@
     "                            \"max_iter\": max_iter,\n",
     "                            \"stop_no_improve\": stop_no_improve,\n",
     "                            \"neighborhood_type\": neighborhood_type,\n",
-    "                            \"use_delta\": False\n",
+    "                            \"use_delta\": True\n",
     "                        }\n",
     "\n",
     "                        start_t = time.perf_counter()\n",
@@ -152,7 +152,7 @@
     "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
     "\n",
     "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"IHC\")\n",
+    "save_experiment_results(df, filename=\"with_delta__results.csv\", time_seconds=int(elapsed), subfolder=\"IHC\")\n",
     "\n",
     "\n",
     "# RAPORT\n",
