--- a/src/notebooks/ihc_numba_multiprocessing.ipynb
+++ b/src/notebooks/ihc_numba_multiprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Rozgrzewanie Numba (kompilacja JIT)...\n",
       "Kompilacja zakończona.\n",
       "\n",
       "\n",
       "Instancja: Dane_TSP_76.xlsx\n",
-      "[15.294651746749878, 15.095995903015137, 15.08499789237976, 15.080434322357178, 15.176350831985474, 15.116434812545776]\n",
       "\n",
-      "Łączny czas eksperymentów: 0.27 min (15.91 sek)\n",
+      "Łączny czas eksperymentów: 0.24 min (14.13 sek)\n",
       "\n",
       "Podsumowanie (pierwsze 20 wierszy):\n",
       "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  mean_runtime  min_cost                                                                                                                                                                                                                    min_route\n",
-      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  99356.433     15.141478 98615.532 21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-29-26-27-28-43-42-54-53-49-50-52-55-56-51-66-65-71-72-73-64-63-62-61-57-58-59-60-41-40-33-32-35-34-39-38-36-37-18-17-11-12-16-15-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25\n",
+      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  98950.547     13.005557 98144.347 50-49-51-56-55-52-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-38-39-35-34-40-41-60-59-58-61-62-57-63-64-73-72-71-65-66\n",
       "\n",
       "Podsumowanie statystyczne (średnie po neighborhood_type):\n",
       "                   mean_cost   min_cost  mean_runtime\n",
       "neighborhood_type                                    \n",
-      "two_opt            99356.433  98615.532        15.141\n",
+      "two_opt            98950.547  98144.347        13.006\n",
       "\n",
       "Najlepsze parametry:\n",
-      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 99356.433, 'mean_runtime': 15.141477584838867, 'min_cost': 98615.532, 'min_route': '21-22-23-1-76-75-2-3-4-6-7-8-9-10-5-20-19-31-30-29-26-27-28-43-42-54-53-49-50-52-55-56-51-66-65-71-72-73-64-63-62-61-57-58-59-60-41-40-33-32-35-34-39-38-36-37-18-17-11-12-16-15-13-14-74-0-70-67-68-69-47-48-44-45-46-24-25'}\n"
+      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 98950.547, 'mean_runtime': 13.005557179450989, 'min_cost': 98144.347, 'min_route': '50-49-51-56-55-52-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-38-39-35-34-40-41-60-59-58-61-62-57-63-64-73-72-71-65-66'}\n"
      ]
     }
    ],
@@ -102,6 +103,7 @@
     "                        \"max_iter\": max_iter,\n",
     "                        \"stop_no_improve\": stop_no_improve,\n",
     "                        \"neighborhood_type\": neighborhood_type,\n",
+    "                        \"use_delta\": True\n",
     "                    }\n",
     "\n",
     "                    # multiprocessing — równoległe powtórzenia\n",
