(optymalization) use everywhere multiprocessing

--- a/src/notebooks/tabu_numba_multiprocessing.ipynb
+++ b/src/notebooks/tabu_numba_multiprocessing.ipynb
@@ -10,24 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Warm-up Numba (kompilacja JIT)...\n",
-      "Kompilacja zakończona. Start eksperymentu...\n",
+      "Rozgrzewanie (kompilacja JIT jeśli dotyczy)...\n",
+      "Kompilacja zakończona.\n",
       "\n",
       "\n",
-      "Instancja: Dane_TSP_76.xlsx\n",
-      "\n",
-      "Podsumowanie (pierwsze 20 wierszy):\n",
-      "        instance  max_iter  stop_no_improve  tabu_tenure  n_neighbors neighborhood_type  mean_cost   min_cost  mean_runtime\n",
-      "Dane_TSP_76.xlsx 100000000           100000           25          100           two_opt 100233.511 100057.337    134.947954\n",
-      "\n",
-      "Podsumowanie wyników (średnie wg typu sąsiedztwa):\n",
-      "                    mean_cost    min_cost  mean_runtime\n",
-      "neighborhood_type                                      \n",
-      "two_opt            100233.511  100057.337       134.948\n",
-      "\n",
-      "Najlepsze parametry: {'instance': 'Dane_TSP_76.xlsx', 'max_iter': 100000000, 'stop_no_improve': 100000, 'tabu_tenure': 25, 'n_neighbors': 100, 'neighborhood_type': 'two_opt', 'mean_cost': 100233.511, 'min_cost': 100057.337, 'mean_runtime': 134.94795376399875}\n"
+      "Instancja: Dane_TSP_76.xlsx\n"
      ]
     }
    ],
