(chore) save state before remove numba tabu

--- a/src/notebooks/ihc_numba_multiprocessing.ipynb
+++ b/src/notebooks/ihc_numba_multiprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
     "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
     "# USTAWIENIA\n",
-    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_76.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
     "    # \"n_starts\": [400],         # liczba restartów wspinaczki\n",
@@ -144,7 +144,7 @@
     "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
     "\n",
     "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"IHC\")\n",
+    "save_experiment_results(df, filename=\"with_delta__results.csv\", time_seconds=int(elapsed), subfolder=\"IHC\")\n",
     "\n",
     "\n",
     "# RAPORT\n",
