--- a/src/notebooks/sa_numba_multiprocessing.ipynb
+++ b/src/notebooks/sa_numba_multiprocessing.ipynb
@@ -31,10 +31,11 @@
    ],
    "source": [
     "# SKRYPT EKSPERYMENTALNY\n",
-    "# Uruchamia analizę algorytmu Tabu Search (TS) dla różnych\n",
-    "# konfiguracji parametrów. Dla każdej kombinacji wykonywane jest\n",
-    "# kilka powtórzeń, zapisywane są statystyki jakości oraz czas\n",
-    "# działania. Wyniki trafiają do pliku CSV.\n",
+    "# Uruchamia analizę algorytmu Symulowanego Wyżarzania (SA)\n",
+    "# dla różnych zestawów parametrów. Dla każdej konfiguracji\n",
+    "# wykonywanych jest kilka powtórzeń, zapisywany jest koszt,\n",
+    "# czas wykonania oraz średnie statystyki. Wyniki trafiają\n",
+    "# do pliku CSV przy użyciu save_experiment_results().\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -45,7 +46,7 @@
     "from multiprocessing import Pool, cpu_count\n",
     "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
-    "from src.algorithms.tabu import solve_tsp\n",
+    "from src.algorithms.sa_numba import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
@@ -54,21 +55,28 @@
     "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
-    "    \"max_iter\": [100_000_000],\n",
-    "    \"stop_no_improve\": [100_000],\n",
-    "    \"tabu_tenure\": [25],\n",
-    "    \"n_neighbors\": [100],\n",
+    "    \"T0\": [5000],\n",
+    "    \"alpha\": [0.999999],\n",
+    "    \"T_min\": [0.0001],\n",
+    "    \"max_iter\": [10_000_000],\n",
     "    \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
     "\n",
-    "REPEATS = 3\n",
+    "REPEATS = 6\n",
     "results = []\n",
     "\n",
     "\n",
-    "# ROZGRZANIE (KOMPILACJA JIT JEŚLI WYSTĘPUJE)\n",
-    "print(\"Rozgrzewanie (kompilacja JIT jeśli dotyczy)...\")\n",
+    "# ROZGRZANIE NUMBA (KOMPILACJA JIT)\n",
+    "print(\"Rozgrzewanie Numba (kompilacja JIT)...\")\n",
     "D = load_tsp_matrix(TSP_FILES[0])\n",
-    "_ = solve_tsp(D, {\"max_iter\": 5, \"tabu_tenure\": 3, \"n_neighbors\": 5})\n",
+    "_ = solve_tsp(D, {\n",
+    "    \"T0\": 1000,\n",
+    "    \"alpha\": 0.999,\n",
+    "    \"T_min\": 0.001,\n",
+    "    \"max_iter\": 100,\n",
+    "    \"neighborhood_type\": \"swap\",\n",
+    "    \"use_delta\": False\n",
+    "})\n",
     "print(\"Kompilacja zakończona.\\n\")\n",
     "\n",
     "\n",
@@ -79,18 +87,19 @@
     "    print(f\"\\nInstancja: {tsp_file}\")\n",
     "    D = load_tsp_matrix(tsp_file)\n",
     "\n",
-    "    for max_iter in PARAM_GRID[\"max_iter\"]:\n",
-    "        for stop_no_improve in PARAM_GRID[\"stop_no_improve\"]:\n",
-    "            for tabu_tenure in PARAM_GRID[\"tabu_tenure\"]:\n",
-    "                for n_neighbors in PARAM_GRID[\"n_neighbors\"]:\n",
+    "    for T0 in PARAM_GRID[\"T0\"]:\n",
+    "        for alpha in PARAM_GRID[\"alpha\"]:\n",
+    "            for T_min in PARAM_GRID[\"T_min\"]:\n",
+    "                for max_iter in PARAM_GRID[\"max_iter\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
     "\n",
     "                        params = {\n",
+    "                            \"T0\": T0,\n",
+    "                            \"alpha\": alpha,\n",
+    "                            \"T_min\": T_min,\n",
     "                            \"max_iter\": max_iter,\n",
-    "                            \"stop_no_improve\": stop_no_improve,\n",
-    "                            \"tabu_tenure\": tabu_tenure,\n",
-    "                            \"n_neighbors\": n_neighbors,\n",
     "                            \"neighborhood_type\": neighborhood_type,\n",
+    "                            \"use_delta\": True,   # włączamy szybkie liczenie DELTA\n",
     "                        }\n",
     "\n",
     "                        # multiprocessing — równoległe powtórzenia\n",
@@ -98,6 +107,7 @@
     "                            parallel_jobs = [\n",
     "                                (solve_tsp, D, params) for _ in range(REPEATS)\n",
     "                            ]\n",
+    "\n",
     "                            results_parallel = pool.map(run_single_repeat, parallel_jobs)\n",
     "\n",
     "                        costs = [c for c, _, _ in results_parallel]\n",
@@ -105,10 +115,10 @@
     "\n",
     "                        results.append({\n",
     "                            \"instance\": tsp_file,\n",
+    "                            \"T0\": T0,\n",
+    "                            \"alpha\": alpha,\n",
+    "                            \"T_min\": T_min,\n",
     "                            \"max_iter\": max_iter,\n",
-    "                            \"stop_no_improve\": stop_no_improve,\n",
-    "                            \"tabu_tenure\": tabu_tenure,\n",
-    "                            \"n_neighbors\": n_neighbors,\n",
     "                            \"neighborhood_type\": neighborhood_type,\n",
     "                            \"mean_cost\": round(np.mean(costs), 3),\n",
     "                            \"min_cost\": round(np.min(costs), 3),\n",
@@ -120,13 +130,13 @@
     "end_total = time.perf_counter()\n",
     "elapsed = end_total - start_total\n",
     "\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "\n",
     "df = pd.DataFrame(results)\n",
-    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"TS\")\n",
+    "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"SA\")\n",
     "\n",
     "\n",
     "# RAPORT\n",
-    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
-    "\n",
     "print(\"\\nPodsumowanie wyników:\")\n",
     "print(df.groupby(\"neighborhood_type\")[[\"mean_cost\", \"min_cost\", \"mean_runtime\"]]\n",
     "      .mean()\n",
