--- a/src/notebooks/tabu_numba_multiprocessing.ipynb
+++ b/src/notebooks/tabu_numba_multiprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Rozgrzewanie (kompilacja JIT jeśli dotyczy)...\n",
       "Kompilacja zakończona.\n",
       "\n",
       "\n",
-      "Instancja: Dane_TSP_76.xlsx\n"
+      "Instancja: Dane_TSP_76.xlsx\n",
+      "\n",
+      "Podsumowanie (pierwsze 20 wierszy):\n",
+      "        instance  max_iter  stop_no_improve  tabu_tenure  n_neighbors neighborhood_type  mean_cost  min_cost  mean_runtime\n",
+      "Dane_TSP_76.xlsx    100000            10000           15          100           two_opt 101027.051 100511.86      21.97422\n",
+      "\n",
+      "Łączny czas eksperymentów: 0.47 min (28.05 sek)\n",
+      "\n",
+      "Podsumowanie wyników:\n",
+      "                    mean_cost   min_cost  mean_runtime\n",
+      "neighborhood_type                                     \n",
+      "two_opt            101027.051  100511.86        21.974\n",
+      "\n",
+      "Najlepsze parametry:\n",
+      "{'instance': 'Dane_TSP_76.xlsx', 'max_iter': 100000, 'stop_no_improve': 10000, 'tabu_tenure': 15, 'n_neighbors': 100, 'neighborhood_type': 'two_opt', 'mean_cost': 101027.051, 'min_cost': 100511.86, 'mean_runtime': 21.974219624998415}\n"
      ]
     }
    ],
@@ -31,20 +47,30 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
-    "from src.algorithms.tabu import solve_tsp\n",
+    "# from src.algorithms.tabu_full_move import solve_tsp\n",
+    "from src.algorithms.tabu_full_path import solve_tsp\n",
+    "# from src.algorithms.tabu_numba import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
+    "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
     "\n",
     "# USTAWIENIA\n",
     "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
-    "    \"max_iter\": [100_000_000],\n",
-    "    \"stop_no_improve\": [100_000],\n",
-    "    \"tabu_tenure\": [25],\n",
+    "    \"max_iter\": [100_000],\n",
+    "    \"stop_no_improve\": [10_000],\n",
+    "    \"tabu_tenure\": [15],\n",
     "    \"n_neighbors\": [100],\n",
     "    \"neighborhood_type\": [\"two_opt\"],\n",
+    "    # \"max_iter\": [10_000_000],\n",
+    "    # \"stop_no_improve\": [100_000],\n",
+    "    # \"tabu_tenure\": [25],\n",
+    "    # \"n_neighbors\": [100],\n",
+    "    # \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
     "\n",
     "REPEATS = 3\n",
@@ -71,24 +97,23 @@
     "                for n_neighbors in PARAM_GRID[\"n_neighbors\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
     "\n",
-    "                        costs = []\n",
-    "                        runtimes = []\n",
+    "                        params = {\n",
+    "                            \"max_iter\": max_iter,\n",
+    "                            \"stop_no_improve\": stop_no_improve,\n",
+    "                            \"tabu_tenure\": tabu_tenure,\n",
+    "                            \"n_neighbors\": n_neighbors,\n",
+    "                            \"neighborhood_type\": neighborhood_type,\n",
+    "                        }\n",
     "\n",
-    "                        for _ in range(REPEATS):\n",
-    "                            params = {\n",
-    "                                \"max_iter\": max_iter,\n",
-    "                                \"stop_no_improve\": stop_no_improve,\n",
-    "                                \"tabu_tenure\": tabu_tenure,\n",
-    "                                \"n_neighbors\": n_neighbors,\n",
-    "                                \"neighborhood_type\": neighborhood_type,\n",
-    "                            }\n",
+    "                        # multiprocessing — równoległe powtórzenia\n",
+    "                        with Pool(processes=cpu_count()) as pool:\n",
+    "                            parallel_jobs = [\n",
+    "                                (solve_tsp, D, params) for _ in range(REPEATS)\n",
+    "                            ]\n",
+    "                            results_parallel = pool.map(run_single_repeat, parallel_jobs)\n",
     "\n",
-    "                            start_t = time.perf_counter()\n",
-    "                            route, cost, runtime, meta = solve_tsp(D, params)\n",
-    "                            total_time = time.perf_counter() - start_t\n",
-    "\n",
-    "                            costs.append(cost)\n",
-    "                            runtimes.append(total_time)\n",
+    "                        costs = [c for c, _, _ in results_parallel]\n",
+    "                        runtimes = [t for _, _, t in results_parallel]\n",
     "\n",
     "                        results.append({\n",
     "                            \"instance\": tsp_file,\n",
@@ -120,7 +145,7 @@
     "      .round(3))\n",
     "\n",
     "best = df.loc[df[\"mean_cost\"].idxmin()]\n",
-    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")"
+    "print(f\"\\nNajlepsze parametry:\\n{best.to_dict()}\")\n"
    ]
   }
  ],
