(distance) fix delta distance

--- a/src/notebooks/ihc_numba_multiprocessing.ipynb
+++ b/src/notebooks/ihc_numba_multiprocessing.ipynb
@@ -17,20 +17,7 @@
       "\n",
       "\n",
       "Instancja: Dane_TSP_76.xlsx\n",
-      "\n",
-      "Łączny czas eksperymentów: 0.24 min (14.13 sek)\n",
-      "\n",
-      "Podsumowanie (pierwsze 20 wierszy):\n",
-      "        instance  n_starts  max_iter  stop_no_improve neighborhood_type  mean_cost  mean_runtime  min_cost                                                                                                                                                                                                                    min_route\n",
-      "Dane_TSP_76.xlsx      1600     16000             1600           two_opt  98950.547     13.005557 98144.347 50-49-51-56-55-52-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-38-39-35-34-40-41-60-59-58-61-62-57-63-64-73-72-71-65-66\n",
-      "\n",
-      "Podsumowanie statystyczne (średnie po neighborhood_type):\n",
-      "                   mean_cost   min_cost  mean_runtime\n",
-      "neighborhood_type                                    \n",
-      "two_opt            98950.547  98144.347        13.006\n",
-      "\n",
-      "Najlepsze parametry:\n",
-      "{'instance': 'Dane_TSP_76.xlsx', 'n_starts': 1600, 'max_iter': 16000, 'stop_no_improve': 1600, 'neighborhood_type': 'two_opt', 'mean_cost': 98950.547, 'mean_runtime': 13.005557179450989, 'min_cost': 98144.347, 'min_route': '50-49-51-56-55-52-53-54-42-43-27-26-28-33-32-29-30-31-19-20-5-10-9-8-7-6-4-3-2-75-76-1-23-22-21-25-24-46-45-44-48-47-69-68-67-70-0-74-14-13-12-11-15-16-17-18-37-36-38-39-35-34-40-41-60-59-58-61-62-57-63-64-73-72-71-65-66'}\n"
+      "[1/1] n_starts=5000, max_iter=25000, stop_no_improve=500, neigh=swap\n"
      ]
     }
    ],
@@ -54,6 +41,7 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import itertools\n",
     "from multiprocessing import Pool, cpu_count\n",
     "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
@@ -62,20 +50,23 @@
     "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
     "# USTAWIENIA\n",
-    "TSP_FILES = [\"Dane_TSP_76.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_76.xlsx\"]\n",
+    "# TSP_FILES = [\"Dane_TSP_48.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_127.xlsx\"]\n",
     "\n",
+    "# PARAM_GRID = {\n",
+    "#     \"n_starts\": [100, 500, 1_000, 5_000], # liczba restartów wspinaczki\n",
+    "#     \"max_iter\": [200, 2_000, 10_000, 25_000], # liczba iteracji jednej wspinaczki\n",
+    "#     \"stop_no_improve\": [100, 500, 1_000, 2_000],  # limit stagnacji\n",
+    "#     \"neighborhood_type\": [\"swap\", \"insert\", \"two_opt\"],\n",
+    "# }\n",
+    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
     "PARAM_GRID = {\n",
-    "    # \"n_starts\": [400],         # liczba restartów wspinaczki\n",
-    "    # \"max_iter\": [4000],        # liczba iteracji jednej wspinaczki\n",
-    "    # \"stop_no_improve\": [400],  # limit stagnacji\n",
-    "    # \"neighborhood_type\": [\"two_opt\"],\n",
-    "    \"n_starts\": [1600],         # liczba restartów wspinaczki\n",
-    "    \"max_iter\": [16000],        # liczba iteracji jednej wspinaczki\n",
-    "    \"stop_no_improve\": [1600],  # limit stagnacji\n",
-    "    \"neighborhood_type\": [\"two_opt\"],\n",
+    "    \"n_starts\": [5_000], # liczba restartów wspinaczki\n",
+    "    \"max_iter\": [25_000], # liczba iteracji jednej wspinaczki\n",
+    "    \"stop_no_improve\": [500],  # limit stagnacji\n",
+    "    \"neighborhood_type\": [\"swap\"],\n",
     "}\n",
     "\n",
-    "REPEATS = 6   # liczba powtórzeń dla każdej kombinacji parametrów\n",
+    "REPEATS = 5   # liczba powtórzeń dla każdej kombinacji parametrów\n",
     "results = []  # tablica na wyniki\n",
     "\n",
     "\n",
@@ -87,6 +78,16 @@
     "\n",
     "\n",
     "# GŁÓWNA PĘTLA\n",
+    "# Obliczamy łączną liczbę kombinacji\n",
+    "all_combos = list(itertools.product(\n",
+    "    PARAM_GRID[\"n_starts\"],\n",
+    "    PARAM_GRID[\"max_iter\"],\n",
+    "    PARAM_GRID[\"stop_no_improve\"],\n",
+    "    PARAM_GRID[\"neighborhood_type\"]\n",
+    "))\n",
+    "total = len(all_combos) * len(TSP_FILES)\n",
+    "counter = 0\n",
+    "\n",
     "start_total = time.perf_counter()\n",
     "\n",
     "for tsp_file in TSP_FILES:\n",
@@ -97,13 +98,22 @@
     "        for max_iter in PARAM_GRID[\"max_iter\"]:\n",
     "            for stop_no_improve in PARAM_GRID[\"stop_no_improve\"]:\n",
     "                for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
+    "                    counter += 1\n",
+    "\n",
+    "                    print(\n",
+    "                        f\"[{counter}/{total}] \"\n",
+    "                        f\"n_starts={n_starts}, \"\n",
+    "                        f\"max_iter={max_iter}, \"\n",
+    "                        f\"stop_no_improve={stop_no_improve}, \"\n",
+    "                        f\"neigh={neighborhood_type}\"\n",
+    "                    )\n",
     "\n",
     "                    params = {\n",
     "                        \"n_starts\": n_starts,\n",
     "                        \"max_iter\": max_iter,\n",
     "                        \"stop_no_improve\": stop_no_improve,\n",
     "                        \"neighborhood_type\": neighborhood_type,\n",
-    "                        \"use_delta\": True\n",
+    "                        \"use_delta\": False\n",
     "                    }\n",
     "\n",
     "                    # multiprocessing — równoległe powtórzenia\n",
