--- a/src/notebooks/sa_numba_multiprocessing.ipynb
+++ b/src/notebooks/sa_numba_multiprocessing.ipynb
@@ -43,6 +43,7 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import itertools\n",
     "from multiprocessing import Pool, cpu_count\n",
     "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
@@ -62,7 +63,7 @@
     "    \"neighborhood_type\": [\"two_opt\"],\n",
     "}\n",
     "\n",
-    "REPEATS = 6\n",
+    "REPEATS = 5\n",
     "results = []\n",
     "\n",
     "\n",
@@ -81,6 +82,16 @@
     "\n",
     "\n",
     "# GŁÓWNA PĘTLA\n",
+    "# Obliczamy łączną liczbę kombinacji\n",
+    "all_combos = list(itertools.product(\n",
+    "    PARAM_GRID[\"T0\"],\n",
+    "    PARAM_GRID[\"alpha\"],\n",
+    "    PARAM_GRID[\"T_min\"],\n",
+    "    PARAM_GRID[\"max_iter\"],\n",
+    "    PARAM_GRID[\"neighborhood_type\"],\n",
+    "))\n",
+    "total = len(all_combos) * len(TSP_FILES)\n",
+    "counter = 0\n",
     "start_total = time.perf_counter()\n",
     "\n",
     "for tsp_file in TSP_FILES:\n",
@@ -92,6 +103,16 @@
     "            for T_min in PARAM_GRID[\"T_min\"]:\n",
     "                for max_iter in PARAM_GRID[\"max_iter\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
+    "                        counter += 1\n",
+    "\n",
+    "                        print(\n",
+    "                            f\"[{counter}/{total}] \"\n",
+    "                            f\"T0={T0}, \"\n",
+    "                            f\"alpha={alpha}, \"\n",
+    "                            f\"T_min={T_min}, \"\n",
+    "                            f\"max_iter={max_iter}\"\n",
+    "                            f\"neighborhood_type={neighborhood_type}\"\n",
+    "                        )\n",
     "\n",
     "                        params = {\n",
     "                            \"T0\": T0,\n",
