--- a/src/notebooks/tabu_multiprocessing.ipynb
+++ b/src/notebooks/tabu_multiprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -47,33 +47,28 @@
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import itertools\n",
     "from multiprocessing import Pool, cpu_count\n",
     "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
-    "# from src.algorithms.tabu_full_move import solve_tsp\n",
-    "from src.algorithms.tabu_full_path import solve_tsp\n",
-    "# from src.algorithms.tabu_numba import solve_tsp\n",
+    "from algorithms.tabu_move import solve_tsp\n",
+    "# from src.algorithms.tabu_full_path import solve_tsp\n",
     "from src.utils.result_saver import save_experiment_results\n",
     "from src.utils.run_single_repeat import run_single_repeat\n",
     "\n",
     "\n",
     "# USTAWIENIA\n",
-    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
+    "TSP_FILES = [\"Dane_TSP_48.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_127.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
-    "    \"max_iter\": [100_000],\n",
-    "    \"stop_no_improve\": [10_000],\n",
-    "    \"tabu_tenure\": [15],\n",
-    "    \"n_neighbors\": [100],\n",
-    "    \"neighborhood_type\": [\"two_opt\"],\n",
-    "    # \"max_iter\": [10_000_000],\n",
-    "    # \"stop_no_improve\": [100_000],\n",
-    "    # \"tabu_tenure\": [25],\n",
-    "    # \"n_neighbors\": [100],\n",
-    "    # \"neighborhood_type\": [\"two_opt\"],\n",
+    "    \"max_iter\": [5_000, 10_000, 25_000, 100_000],\n",
+    "    \"stop_no_improve\": [500, 1_000, 2_000, 5_000],\n",
+    "    \"tabu_tenure\": [5, 10, 15, 25],\n",
+    "    \"n_neighbors\": [10, 30, 60, 100],\n",
+    "    \"neighborhood_type\": [\"swap\", \"insert\", \"two_opt\"],\n",
     "}\n",
     "\n",
-    "REPEATS = 3\n",
+    "REPEATS = 5\n",
     "results = []\n",
     "\n",
     "\n",
@@ -85,6 +80,16 @@
     "\n",
     "\n",
     "# GŁÓWNA PĘTLA\n",
+    "# Obliczamy łączną liczbę kombinacji\n",
+    "all_combos = list(itertools.product(\n",
+    "    PARAM_GRID[\"max_iter\"],\n",
+    "    PARAM_GRID[\"stop_no_improve\"],\n",
+    "    PARAM_GRID[\"tabu_tenure\"],\n",
+    "    PARAM_GRID[\"n_neighbors\"],\n",
+    "    PARAM_GRID[\"neighborhood_type\"],\n",
+    "))\n",
+    "total = len(all_combos) * len(TSP_FILES)\n",
+    "counter = 0\n",
     "start_total = time.perf_counter()\n",
     "\n",
     "for tsp_file in TSP_FILES:\n",
@@ -96,6 +101,16 @@
     "            for tabu_tenure in PARAM_GRID[\"tabu_tenure\"]:\n",
     "                for n_neighbors in PARAM_GRID[\"n_neighbors\"]:\n",
     "                    for neighborhood_type in PARAM_GRID[\"neighborhood_type\"]:\n",
+    "                        counter += 1\n",
+    "\n",
+    "                        print(\n",
+    "                            f\"[{counter}/{total}] \"\n",
+    "                            f\"max_iter={max_iter}, \"\n",
+    "                            f\"stop_no_improve={stop_no_improve}, \"\n",
+    "                            f\"tabu_tenure={tabu_tenure}, \"\n",
+    "                            f\"n_neighbors={n_neighbors}\"\n",
+    "                            f\"neighborhood_type={neighborhood_type}\"\n",
+    "                        )\n",
     "\n",
     "                        params = {\n",
     "                            \"max_iter\": max_iter,\n",
